--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cookie": "^1.0.2",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
